# Graffito-Editor

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
apps/sms-cli/: Cargo.toml
apps/sms-cli/src/: main.rs
apps/sms-editor/: Cargo.toml
apps/sms-editor/src/: audio_helpers.rs  audio_preview.rs  camera.rs  dialogue.rs  direct_boot.rs  document_commands.rs  dolphin_graphics.rs  goop.rs  gpu_viewport.rs  gpu_viewport_tests.rs  lib.rs  main.rs  managed_build.rs  model_assets.rs  music_library.rs  noki_render_test.rs  npc_accessories.rs  npc_materials.rs  outliner.rs  preview_assets.rs  preview_flags.rs  preview_geometry.rs  preview_grass.rs  preview_particles.rs  preview_types.rs  preview_wires.rs  project.rs  project_ui.rs  skybox_library.rs  software_renderer.rs  stage_creation.rs  startup.rs  tests.rs  ui_panels.rs  viewport_ui.rs
apps/sms-editor/src/shaders/: composite.wgsl  depth_clear.wgsl  j3d.wgsl
apps/xtask/src/: gltf_fixtures.rs  main.rs
crates/sms-authoring/src/: catalog.rs  collision.rs  compile.rs  error.rs  (+5 more)
crates/sms-formats/: Cargo.toml
crates/sms-render/: Cargo.toml
crates/sms-scene/: Cargo.toml
crates/sms-scene/src/: blank_stage.rs  dialogue_authoring.rs  goop_authoring.rs  lib.rs  object_authoring.rs  object_parameters.rs  project_store.rs  route_authoring.rs  stage_archive.rs  stage_export.rs  validation.rs
crates/sms-scene/tests/: object_parameter_lookup.rs
crates/sms-schema/: Cargo.toml
docs/: project-format.md
(+29 files in other folders)
