[package]
name = "sms-editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
eframe.workspace = true
egui.workspace = true
sms-formats.workspace = true
sms-render.workspace = true
sms-scene.workspace = true
sms-schema.workspace = true
