[package]
name = "sms-scene"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sms-formats.workspace = true
sms-schema.workspace = true
thiserror.workspace = true
toml.workspace = true
